--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,8 @@ USER_ID = client_id
 PREDICTION = target
 
 [MODEL]
-FilePath = models/model.pkl
+FilePath = models
+Preprocessors = preprocessors
 
 [SUBMISSION]
 FilePath = submission.csv
